--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,62 @@
-asgiref==3.8.1
-blinker==1.8.2
-certifi==2024.7.4
+aiohttp==3.9.3
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
+annotated-types==0.6.0
+anyio==3.7.1
+attrs==23.2.0
+beautifulsoup4==4.12.3
+blinker==1.7.0
+certifi==2024.2.2
+cffi==1.16.0
+chardet==3.0.4
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-Flask==3.0.3
-Flask-Cors==4.0.1
+distlib==0.3.8
+distro==1.9.0
+dnspython==2.6.1
+filelock==3.13.1
+Flask==3.0.2
+frozenlist==1.4.1
+googletrans==4.0.0rc1
 gunicorn
-idna==3.7
-itsdangerous==2.2.0
-Jinja2==3.1.4
+h11==0.12.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2024.4.1
+httpcore==0.15.0
+httpx==0.25.1
+hyperframe==5.2.0
+idna==2.10
+itsdangerous==2.1.2
+Jinja2==3.1.3
 MarkupSafe==2.1.5
-pycryptodome==3.20.0
-pyodbc==5.1.0
-requests==2.32.3
-urllib3==2.2.2
-Werkzeug==3.0.3
+multidict==6.0.5
+openai==0.28.0
+outcome==1.3.0.post0
+platformdirs==4.1.0
+pycparser==2.22
+pydantic==2.6.4
+pydantic_core==2.16.3
+PyJWT==2.8.0
+pymongo==4.6.3
+PySocks==1.7.1
+requests==2.31.0
+rfc3986==1.5.0
+selenium==4.21.0
+setuptools==69.0.3
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.5
+stripe==8.10.0
+tqdm==4.66.2
+trio==0.25.1
+trio-websocket==0.11.1
+twilio==9.0.2
+typing_extensions==4.11.0
+urllib3==2.2.1
+virtualenv==20.25.0
+Werkzeug==3.0.1
+wheel==0.42.0
+wsproto==1.2.0
+yarl==1.9.4
